--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@asymmetrik/ngx-leaflet-draw",
-	"artifactName": "ngx-leaflet-draw",
+	"name": "ngx-leaflet-draw-ntg",
+	"artifactName": "ngx-leaflet-draw-ntg",
 	"moduleName": "ngxLeafletDraw",
 	"description": "Angular.io component for the draw plugin for Leaflet",
 	"version": "5.0.1",
@@ -24,7 +24,7 @@
 		"compile": "ngc -p tsconfig-aot.json",
 		"lint": "tslint -c tslint.json -t stylish 'src/**/*.ts'",
 		"rollup": "rollup -c rollup.config.js",
-		"uglify": "uglifyjs --comments 'license' -o ./dist/bundles/ngx-leaflet-draw.min.js -- ./dist/bundles/ngx-leaflet-draw.js",
+		"uglify": "uglifyjs --comments 'license' -o ./dist/bundles/ngx-leaflet-draw-ntg.min.js -- ./dist/bundles/ngx-leaflet-draw-ntg.js",
 		"watch": " watch 'npm run lint' ./src"
 	},
 	"files": [
@@ -35,7 +35,7 @@
 		"@angular/core": ">=8",
 		"@angular/common": ">=8",
 		"leaflet": "1",
-		"leaflet-draw": "1",
+		"leaflet-draw-ntg": "^1.0.3",
 		"@asymmetrik/ngx-leaflet": "6"
 	},
 	"devDependencies": {
@@ -50,7 +50,7 @@
 		"@asymmetrik/ngx-leaflet": "6",
 		"leaflet": "1",
 		"@types/leaflet": "1",
-		"leaflet-draw": "1",
+		"leaflet-draw-ntg": "^1.0.3",
 		"@types/leaflet-draw": "0.4",
 		"@types/node": "12",
 		"angular2-template-loader": "0.6",
